Bug 162259 - SVG Text in Logo has some letters out of proportion
Summary: SVG Text in Logo has some letters out of proportion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.5.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisected, bisected, regression
: 163352 (view as bug list)
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2024-07-30 03:37 UTC by Frank Zimmerman
Modified: 2024-10-16 09:42 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
The Logo that shows the problem (151.52 KB, image/svg+xml)
2024-07-30 03:38 UTC, Frank Zimmerman
Details
LibreOffice 25.2 master vs Chrome (581.62 KB, image/png)
2024-07-30 07:34 UTC, Xisco Faulí
Details
Comparison of display in 7.6.5.2 and 24.2.5.2 (58.29 KB, image/jpeg)
2024-07-30 10:48 UTC, Frank Zimmerman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Zimmerman 2024-07-30 03:37:33 UTC
Description:
Inserted SVG Logo into Writer document shows some letters of the text out of proportion.

Steps to Reproduce:
1. Insert SVG Logo into Writer document


Actual Results:
Text in SVG Logo has some letters showing out of proportion.

Expected Results:
Nice smooth text, in semi-circle path.


Reproducible: Always


User Profile Reset: No

Additional Info:
For me, this just showed up in the 24.2.5.2 release, which I installed a day or two ago. This SVG is a logo I put in all the books that I work on. It's always worked fine, for many years, until now. I've rendered the text to path in Inkscape, and it works as expected that way, but it seems to be a bug in SVG text rendering.

I have not tested other OS.
Comment 1 Frank Zimmerman 2024-07-30 03:38:42 UTC
Created attachment 195594 [details]
The Logo that shows the problem

Here is the Logo. It has a picture, with some text in semi-circle underneath.
Comment 2 Frank Zimmerman 2024-07-30 03:41:44 UTC
My wording is not so clear in the "Additional Info." What I meant in the last sentence is that I'm working around this problem for now, by making a copy of the logo and rendering the text to a path in Inkscape. This modified logo works correctly. Of course, it does not involve text-rendering this way.
Comment 3 Xisco Faulí 2024-07-30 07:34:08 UTC
Created attachment 195598 [details]
LibreOffice 25.2 master vs Chrome
Comment 4 Xisco Faulí 2024-07-30 07:34:23 UTC
I can't reproduce it in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dc9486f2443fa52588b625c0a2a288bff56a7a45
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 5 Frank Zimmerman 2024-07-30 10:48:21 UTC
Created attachment 195602 [details]
Comparison of display in 7.6.5.2 and 24.2.5.2
Comment 6 Frank Zimmerman 2024-07-30 10:49:21 UTC
Okay, maybe it's just a temporary problem in 24.2.5.2 then. I've attached a jpg showing the problem compared with how it was correctly managed before.
Comment 7 Xisco Faulí 2024-07-30 10:50:30 UTC
Not reproduced in

Version: 24.2.5.0.0+ (X86_64) / LibreOffice Community
Build ID: a685d461433d1803558471f6333ad9d37c672f24
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

either
Comment 8 Xisco Faulí 2024-07-30 10:54:51 UTC
Reproduced in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 88d10b3344d03860b470da236a64304564c1a558
CPU threads: 16; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: el-GR (en_GB); UI: en-US
Calc: threaded

so Windows only
Comment 9 Xisco Faulí 2024-07-30 14:44:33 UTC
Regression introduced by cc3663bbaed4f65d64154e5f9abb51a5f622f710 "tdf#160702: improve text positioning"

Bisected with bibisect-win64-24.8
Comment 10 Mike Kaganski 2024-08-01 17:33:12 UTC
https://gerrit.libreoffice.org/c/core/+/171382
Comment 11 Commit Notification 2024-08-02 15:13:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f29d94c7b1bf9bee3e3598d90ba6e9dfd684ecfc

tdf#162259: correctly handle font width on Windows

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 tdfb 2024-10-10 20:40:48 UTC
*** Bug 163352 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2024-10-16 09:42:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/af96d0741afe869e24531c5c31013e196dba6868

tdf#162259: correctly handle font width on Windows

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.